<resources>
    <string name="app_name">Estacionamiento</string>
    <string name="type_vehicle">Tipo de vehiculo</string>
    <string name="plate">Placa</string>
    <string name="date_entry">Fecha de ingreso</string>
    <string name="cylinder">Cilindraje</string>
    <string name="expressionLetters">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="registry_entry">Registrar Entrada</string>
    <string name="date_exit">FECHA DE SALIDA</string>
    <string name="exit">DAR SALIDA</string>
    <string name="cancel">CANCELAR</string>
    <string name="total_price">PRECIO TOTAL</string>
</resources>