<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="2in"
        android:layout_height="wrap_content"
        android:padding="9dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="9dp">

                <EditText
                    android:id="@+id/entry_dates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:autofillHints="@string/date_entry"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/date_entry"
                    android:inputType="text"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type_vehicle"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/spTypeVehicle"
                    android:layout_width="1in"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/date_entry"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et_licens_plate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:autofillHints="@string/plate"
                    android:digits="@string/expressionLetters"
                    android:hint="@string/plate"
                    android:inputType="text"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et_cylinder_capacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:autofillHints="@string/cylinder"
                    android:hint="@string/cylinder"
                    android:inputType="number"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btnRegistryVehicle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:text="@string/registry_entry" />

                <Button
                    android:id="@+id/btnCancelEntry"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/grey"
                    android:text="@string/cancel" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

