<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/entry_dates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:autofillHints="@string/date_entry"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/date_entry"
                android:inputType="text"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_vehicle"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/spTypeVehicle"
                android:layout_width="1in"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:hint="@string/date_entry"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plate"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/etPlate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:autofillHints="@string/plate"
                android:digits="@string/expressionLetters"
                android:hint="@string/plate"
                android:inputType="text"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cylinder"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/etCylinder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:autofillHints="@string/cylinder"
                android:hint="@string/cylinder"
                android:inputType="number"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnRegistryVehicle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:text="@string/registry_entry" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>